update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,15 @@
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+# improve colors
+set -g default-terminal "screen-256color"
+
+# act like vim
+setw -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+set -g status-bg '#000000'
+
+# set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+run-shell "powerline-daemon -q"
+source "$HOME/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+
