--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 set -g status-bg '#000000'
+bind-key '_' split-window -v
+bind-key '|' split-window -h
 
 # set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 run-shell "powerline-daemon -q"
