--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # improve colors
 set -g default-terminal "screen-256color"
 set -g base-index 1
+set mouse-select-pane on
 
 # act like vim
 setw -g mode-keys vi
