--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@
 set -g default-terminal "screen-256color"
 set -g base-index 1
 set -g mouse-select-pane on
+setw -g mode-mouse on
+set -g mouse-resize-pane on
 
 # act like vim
 setw -g mode-keys vi
@@ -11,6 +13,7 @@ bind k select-pane -U
 bind l select-pane -R
 set -g status-bg '#000000'
 bind-key '_' split-window -v
+bind-key '-' split-window -v
 bind-key '|' split-window -h
 
 # set-option -g default-command "reattach-to-user-namespace -l $SHELL"
