--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,7 @@ bind l select-pane -R
 set -g status-bg '#000000'
 bind-key '_' split-window -v
 bind-key '-' split-window -v
+bind-key '\' split-window -h
 bind-key '|' split-window -h
 
 # set-option -g default-command "reattach-to-user-namespace -l $SHELL"
