--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,7 @@ set -g base-index 1
 set -g mouse-select-pane on
 setw -g mode-mouse on
 set -g mouse-resize-pane on
+set-option -g history-limit 4000
 
 # act like vim
 setw -g mode-keys vi
