--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # improve colors
 set -g default-terminal "screen-256color"
 set -g base-index 1
+set-window-option -g pane-base-index 1
 set -g mouse-select-pane on
 setw -g mode-mouse on
 set -g mouse-resize-pane on
@@ -12,13 +13,15 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-set -g status-bg '#000000'
-bind-key '_' split-window -v
-bind-key '-' split-window -v
-bind-key '\' split-window -h
-bind-key '|' split-window -h
+bind C-k clear-history
 
-# set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+set -g status-bg '#000000'
+bind-key '_' split-window -v -c "#{pane_current_path}"
+bind-key '-' split-window -v -c "#{pane_current_path}"
+bind-key '\' split-window -h -c "#{pane_current_path}"
+bind-key '|' split-window -h -c "#{pane_current_path}"
+
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 run-shell "powerline-daemon -q"
-source "$HOME/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+source "$HOME/.powerline.tmux.conf"
 
