experiment with using the latest version of powerline

--- a/.inputrc
+++ b/.inputrc
@@ -1,6 +1,8 @@
 Tab: menu-complete
 set completion-ignore-case on
 set show-all-if-ambiguous on
+set colored-stats on
+set visible-stats on
 "\e[A": history-search-backward
 "\e[B": history-search-forward
 "\e\e": "\C-a\C-k"
