--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,6 @@ bind-key '\' split-window -h -c "#{pane_current_path}"
 bind-key '|' split-window -h -c "#{pane_current_path}"
 
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
-run-shell "powerline-daemon -q"
+# run-shell "powerline-daemon -q"
 source "$HOME/.powerline.tmux.conf"
 
