add last window binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind C-k clear-history
+bind C-b last-window
 
 set -g status-bg '#000000'
 bind-key '_' split-window -v -c "#{pane_current_path}"
