--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,7 @@ bind k select-pane -U
 bind l select-pane -R
 bind C-k clear-history
 bind C-b last-window
+bind \; last-window
 
 set -g status-bg '#000000'
 bind-key '_' split-window -v -c "#{pane_current_path}"
