--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,14 @@ bind C-k clear-history
 bind C-b last-window
 bind \; last-window
 
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
 set -g status-bg '#000000'
 bind-key '_' split-window -v -c "#{pane_current_path}"
 bind-key '-' split-window -v -c "#{pane_current_path}"
