--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,6 +58,8 @@ set -g message-command-bg black
 setw -g mode-bg colour6
 setw -g mode-fg colour0
 
+set-window-option -g utf8 on
+
 # window status
 setw -g window-status-format " #F#I:#W#F "
 setw -g window-status-current-format " #F#I:#W#F "
