--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim/.vim/bundle/vundle"]
 	path = vim/.vim/bundle/vundle
 	url = https://github.com/gmarik/vundle.git
+[submodule "bash/.bash/git-aware-prompt"]
+	path = bash/.bash/git-aware-prompt
+	url = git://github.com/jimeh/git-aware-prompt.git
