--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = vim/.vim/bundle/vundle
 	url = https://github.com/gmarik/vundle.git
 [submodule "bash/git-aware-prompt"]
-	path = bash/git-aware-prompt
+	path = bash/.bash/git-aware-prompt
 	url = https://github.com/jimeh/git-aware-prompt.git
