--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,13 +14,14 @@ bind C-k clear-history
 bind C-b last-window
 bind \; last-window
 
+set -g mouse on
+
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -T copy-mode-vi Enter
 
 bind-key '_' split-window -v -c "#{pane_current_path}"
 bind-key '-' split-window -v -c "#{pane_current_path}"
