--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,21 +14,27 @@ bind C-k clear-history
 bind C-b last-window
 bind \; last-window
 
-set -g mouse on
+set-option -g mouse on
+set-option -s set-clipboard off
+bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip -se c -i"
+
+# For vi copy mode bindings
+bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip -selection clipboard -i"
+
 
 # Setup 'v' to begin selection as in Vim
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+# bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -T copy-mode-vi Enter
+# unbind -T copy-mode-vi Enter
 
 bind-key '_' split-window -v -c "#{pane_current_path}"
 bind-key '-' split-window -v -c "#{pane_current_path}"
 bind-key '\' split-window -h -c "#{pane_current_path}"
 bind-key '|' split-window -h -c "#{pane_current_path}"
 
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+# set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 
 ######################
 ### DESIGN CHANGES ###
