--- a/tmux/Linux/.tmux.conf
+++ b/tmux/Linux/.tmux.conf
@@ -16,11 +16,7 @@ bind \; last-window
 
 set-option -g mouse on
 set-option -s set-clipboard off
-bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip -se c -i"
-
-# For vi copy mode bindings
-bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip -selection clipboard -i"
-
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
 
 # Setup 'v' to begin selection as in Vim
 # bind-key -Tcopy-mode-vi 'v' send -X begin-selection
@@ -107,7 +103,7 @@ set -g status-bg colour234
 set -g status-fg colour137
 set -g status-attr dim
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour241,bold] #(TZ=America/Chicago date "+%%Y-%%m-%%d") #[fg=colour233,bg=colour245,bold] #(TZ=America/Chicago date "+%%I:%%M %%p") '
+set -g status-right '#[fg=colour233,bg=colour241,bold] #(date "+%%Y-%%m-%%d") #[fg=colour233,bg=colour245,bold] #(date "+%%I:%%M %%p") '
 set -g status-right-length 50
 set -g status-left-length 20
 
