--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -2,6 +2,7 @@
 set -g base-index 1
 set-window-option -g pane-base-index 1
 set-option -g history-limit 4000
+set -s escape-time 0
 
 # act like vim
 setw -g mode-keys vi
