--- a/X/xmobar.config
+++ b/X/xmobar.config
@@ -1,4 +1,4 @@
-Config { font = "xft:Ubuntu Mono:pixelsize=20:antialias=true:hinting=true"
+Config { font = "xft:Lato:pixelsize=24:antialias=true:hinting=true"
        , additionalFonts = []
        , borderColor = "black"
        , border = TopB
@@ -15,11 +15,12 @@ Config { font = "xft:Ubuntu Mono:pixelsize=20:antialias=true:hinting=true"
        , iconRoot = "."
        , allDesktops = True
        , overrideRedirect = True
-       , commands = [ Run Weather "KBDU" ["-t","<station>: <tempF>F",
+       , commands = [
+                      Run Weather "KBDU" ["-t","Boulder, CO: <tempF>F <rh>% <windMph>mph",
                                           "-L","18","-H","25",
                                           "--normal","green",
                                           "--high","red",
-                                          "--low","lightblue"] 36000
+                                          "--low","lightblue"] 9000
                     , Run Network "eth0" ["-L","0","-H","32",
                                           "--normal","green","--high","red"] 10
                     , Run Network "eth1" ["-L","0","-H","32",
@@ -28,11 +29,11 @@ Config { font = "xft:Ubuntu Mono:pixelsize=20:antialias=true:hinting=true"
                                "--normal","green","--high","red"] 10
                     , Run Memory ["-t","Mem: <usedratio>%"] 10
                     , Run Swap [] 10
-                    , Run Com "uname" ["-s","-r"] "" 36000
-                    , Run Date "%Y-%m-%d %a %b %e %I:%M%p " "date" 20
+                    -- , Run Com "uname" ["-s","-r"] "" 36000
+                    , Run Date "%Y-%m-%d %a %b %e %I:%M%p " "date" 50
                     ]
        , sepChar = "%"
        , alignSep = "}{"
        , template = "%cpu% | %memory% * %swap% | %eth0% - %eth1% }\
-                    \{ <fc=#ee9a00>%date%</fc>| %EGPF% | %uname%"
+                    \{ %KBDU% | <fc=#ee9a00>%date%</fc>"
        }
