--- a/X/xmobar.config
+++ b/X/xmobar.config
@@ -30,7 +30,7 @@ Config { font = "xft:Lato:pixelsize=24:antialias=true:hinting=true"
                     , Run Memory ["-t","Mem: <usedratio>%"] 10
                     , Run Swap [] 10
                     -- , Run Com "uname" ["-s","-r"] "" 36000
-                    , Run Date "%Y-%m-%d %a %b %e %I:%M%p %z %Z" "date" 50
+                    , Run Date "%Y-%m-%d %a %b %e %I:%M%P" "date" 50
                     ]
        , sepChar = "%"
        , alignSep = "}{"
