--- a/tmux/Linux/.tmux.conf
+++ b/tmux/Linux/.tmux.conf
@@ -1,5 +1,6 @@
 # improve colors
 set -g base-index 1
+set -s escape-time 0
 set-window-option -g pane-base-index 1
 set-option -g history-limit 4000
 
