--- a/X/xmobar.config
+++ b/X/xmobar.config
@@ -1,9 +1,9 @@
-Config { font = "xft:Lato:pixelsize=24:antialias=true:hinting=true"
+Config { font = "xft:Ubuntu Mono Regular:pixelsize=20:antialias=true:hinting=true"
        , additionalFonts = []
        , borderColor = "black"
        , border = TopB
        , bgColor = "black"
-       , fgColor = "grey"
+       , fgColor = "whitesmoke"
        , alpha = 255
        , position = Top
        , textOffset = -1
