--- a/tmux/Linux/.tmux.conf
+++ b/tmux/Linux/.tmux.conf
@@ -73,7 +73,7 @@ set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # The modes {
 setw -g mode-style bg=colour238,fg=colour196,bold
