--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -1,7 +1,7 @@
 # improve colors
 set -g base-index 1
 set-window-option -g pane-base-index 1
-set-option -g history-limit 4000
+set-option -g history-limit 40000
 set -s escape-time 0
 
 # act like vim
@@ -90,7 +90,7 @@ set -g pane-active-border-style bg=colour236,fg=colour251
 set -g status-position bottom
 set -g status-style dim,bg=colour234,fg=colour137
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour241,bold] #(date "+%%Y-%%m-%%d") #[fg=colour233,bg=colour245,bold] #(date "+%%I:%%M %%p") '
+set -g status-right '' # #[fg=colour233,bg=colour241,bold] #(date "+%%Y-%%m-%%d") #[fg=colour233,bg=colour245,bold] #(date "+%%I:%%M %%p") '
 set -g status-right-length 50
 set -g status-left-length 20
 
