--- a/bash/.gitconfig
+++ b/bash/.gitconfig
@@ -28,5 +28,5 @@
 [init]
 	defaultBranch = main
 [mergetool "sourcetree"]
-	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	cmd = "vimdiff "
 	trustExitCode = true
