--- a/bash/.gitconfig
+++ b/bash/.gitconfig
@@ -1,6 +1,7 @@
 [user]
 	email = williambbradley@gmail.com
 	name = Will Bradley
+	signingkey = 6AD47A807E525EF1
 [color]
   diff = always
   ui = true
