--- a/bash/.gitconfig
+++ b/bash/.gitconfig
@@ -1,7 +1,9 @@
 [user]
 	email = williambbradley@gmail.com
 	name = Will Bradley
-	signingkey = 6AD47A807E525EF1
+	signingKey = 6AD47A807E525EF1!
+[commit]
+  gpgsign = true
 [color]
   diff = always
   ui = true
@@ -23,9 +25,12 @@
   default = heads/*
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
 [init]
 	defaultBranch = main
 [mergetool "sourcetree"]
 	cmd = "vimdiff "
 	trustExitCode = true
+[credential]
+	helper = /usr/local/share/gcm-core/git-credential-manager-core
+[credential "https://dev.azure.com"]
+	useHttpPath = true
