--- a/bash/.ripgreprc
+++ b/bash/.ripgreprc
@@ -1,14 +1,15 @@
--uuu
---glob=!.git/
---glob=!translations/
---glob=!*.swp
---glob=!*.swo
---glob=!*.so
---glob=!__pycache__
---glob=!.mypy_cache/
---glob=!docs/
---glob=!build/
---glob=!node_modules/
---glob=!honnef.co/
---glob=!tags
---glob=!.pylint-env/
+# -uuu
+# --glob=!.git/
+# --glob=!target/
+# --glob=!translations/
+# --glob=!*.swp
+# --glob=!*.swo
+# --glob=!*.so
+# --glob=!__pycache__
+# --glob=!.mypy_cache/
+# --glob=!docs/
+# --glob=!build/
+# --glob=!node_modules/
+# --glob=!honnef.co/
+# --glob=!tags
+# --glob=!.pylint-env/
