--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -17,6 +17,7 @@ bind \; last-window
 set-option -g mouse on
 set-option -s set-clipboard off
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key @ join-pane -h -s !
 
 # Setup 'v' to begin selection as in Vim
 # bind-key -Tcopy-mode-vi 'v' send -X begin-selection
