--- a/bash/.gitconfig
+++ b/bash/.gitconfig
@@ -2,6 +2,8 @@
 	email = williambbradley@gmail.com
 	name = Will Bradley
 	signingKey = 6AD47A807E525EF1!
+[log]
+  showSignature = false
 [commit]
   gpgsign = true
 [color]
@@ -30,7 +32,5 @@
 [mergetool "sourcetree"]
 	cmd = "vimdiff "
 	trustExitCode = true
-[credential]
-	helper = /usr/local/share/gcm-core/git-credential-manager-core
 [credential "https://dev.azure.com"]
 	useHttpPath = true
