--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -13,6 +13,8 @@ bind l select-pane -R
 bind C-k clear-history
 bind C-b last-window
 bind \; last-window
+bind C-l split-window -h -p 33
+bind C-n split-window -v -p 33
 
 set-option -g mouse on
 set-option -s set-clipboard off
