--- a/bash/.gitconfig
+++ b/bash/.gitconfig
@@ -37,5 +37,5 @@
 [mergetool "sourcetree"]
 	cmd = "vimdiff "
 	trustExitCode = true
-[credential "https://dev.azure.com"]
-	useHttpPath = true
+[credential]
+	helper = store
