--- a/bash/.inputrc
+++ b/bash/.inputrc
@@ -3,6 +3,8 @@ set revert-all-at-newline
 set show-all-if-ambiguous on
 set colored-stats on
 set visible-stats on
+set completion-ignore-case On
+
 "\e[A": history-search-backward
 "\e[B": history-search-forward
 "\e\e": "\C-a\C-k"
