--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -66,8 +66,8 @@ setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=c
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
 # Terminal type configuration
-# set -g default-terminal "screen-256color"
-# set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 #### COLOUR (Solarized 256)
 
