--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -65,9 +65,18 @@ set -g status-left-length 20
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
-# Terminal type configuration
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",tmux-256color:Tc"
+# ==================
+# {n}vim compability
+# MacOS ships with a very old ncurses and terminfo. May need to update terminfo to recognize tmux-256color.
+# https://gist.github.com/bbqtd/a4ac060d6f6b9ea6fe3aabe735aa9d95
+set-option -a terminal-overrides ",alacritty:RGB"
+# Proper colors
+set-option -sa terminal-features ',alacritty:RGB' # Makes sure that colors in tmux are the same as without tmux
+
+# Undercurl
+set -g default-terminal "alacritty" # tmux-256color" # If you don't add this, then neovim :checkhealth will complain. But "alacritty" also works
+set-option -ga terminal-features ",alacritty:usstyle"
+
 
 #### COLOUR (Solarized 256)
 
