--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,13 +1,15 @@
 [window]
-decorations = "Full" # "None"
+decorations = "None" # "Full"
 option_as_alt = "OnlyRight"
+padding.x = 4
+padding.y = 4
 
 [scrolling]
 history = 100000
 
 [font]
-normal = { family = "Fira Code", style = "Regular" }
-bold = { family = "Fira Code", style = "Medium" }
+normal = { family = "FiraCode Nerd Font Mono", style = "Regular" }
+bold = { family = "FiraCode Nerd Font Mono", style = "Medium" }
 italic = { family = "SauceCodePro Nerd Font Mono", style = "Italic" }
 bold_italic = { family = "SauceCodePro Nerd Font Mono", style = "SemiBold Italic" }
 size = 14
