--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -62,6 +62,8 @@ set -g status-right ''
 set -g status-right-length 50
 set -g status-left-length 20
 
+set -g window-status-style fg=colour240,bg=default
+set -g window-status-current-style fg=colour15,bg=colour28
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
@@ -84,11 +86,18 @@ set-option -ga terminal-features ",alacritty:usstyle"
 set-option -g status-style fg=colour136,bg=colour235 #yellow and base02
 
 # default window title colors
-set-window-option -g window-status-style fg=colour244,bg=default #base0 and default
+## set-window-option -g window-status-style fg=green,bg=default #base0 and default
 #set-window-option -g window-status-style dim
 
+# Default window title text style
+# set -g window-status-style fg=colour240,bg=default
+# set -g window-status-format "#[fg=colour240,bg=default]#I:#W#{?window_flags,#{window_flags},}"
+
+# Current window title text style
+# set -g window-status-current-format "#[fg=colour15,bg=colour28]#I:#W#{?window_flags,#{window_flags},}"
+
 # active window title colors
-set-window-option -g window-status-current-style fg=colour166,bg=default #orange and default
+# set-window-option -g window-status-current-style fg=black,bg=yellow #orange and default
 #set-window-option -g window-status-current-style bright
 
 # pane border
