--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -8,11 +8,12 @@ padding.y = 0
 history = 100000
 
 [font]
-normal = { family = "FiraCode Nerd Font Mono", style = "Regular" }
-bold = { family = "FiraCode Nerd Font Mono", style = "Medium" }
-italic = { family = "SauceCodePro Nerd Font Mono", style = "Italic" }
-bold_italic = { family = "SauceCodePro Nerd Font Mono", style = "SemiBold Italic" }
-size = 14
+normal = { family = "MesloLGL Nerd Font", style = "Regular" }
+bold = { family = "MesloLGL Nerd Font", style = "Bold" }
+italic = { family = "MesloLGL Nerd Font", style = "Italic" }
+bold_italic = { family = "MesloLGL Nerd Font", style = "Bold Italic" }
+size = 13
+offset = { x = 0, y = -4 }
 builtin_box_drawing = true
 
 [terminal]
