--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,19 +1,18 @@
 [window]
 decorations = "Full"
 option_as_alt = "OnlyRight"
-padding.x = 0
-padding.y = 0
+padding.x = 4
+padding.y = 4
 
 [scrolling]
 history = 100000
 
 [font]
-normal = { family = "MesloLGL Nerd Font", style = "Regular" }
-bold = { family = "MesloLGL Nerd Font", style = "Bold" }
-italic = { family = "MesloLGL Nerd Font", style = "Italic" }
-bold_italic = { family = "MesloLGL Nerd Font", style = "Bold Italic" }
-size = 13
-offset = { x = 0, y = -4 }
+normal = { family = "FiraCode Nerd Font Mono", style = "Regular" }
+bold = { family = "FiraCode Nerd Font Mono", style = "Medium" }
+italic = { family = "SauceCodePro Nerd Font Mono", style = "Italic" }
+bold_italic = { family = "SauceCodePro Nerd Font Mono", style = "SemiBold Italic" }
+size = 14
 builtin_box_drawing = true
 
 [terminal]
