--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,18 +1,14 @@
-// Zed settings
-//
-// For information on how to configure Zed, see the Zed
-// documentation: https://zed.dev/docs/configuring-zed
-//
-// To see all of Zed's default settings without changing your
-// custom settings, run `zed: open default settings` from the
-// command palette
+// See https://zed.dev/docs/configuring-zed.
 {
+  "base_keymap": "VSCode",
   "features": {
     "inline_completion_provider": "supermaven"
   },
   "vim_mode": true,
-  "ui_font_size": 14,
-  "buffer_font_size": 14,
+  "ui_font_family": "MesloLGL Nerd Font",
+  "ui_font_size": 12,
+  "buffer_font_family": "MesloLGL Nerd Font",
+  "buffer_font_size": 12,
   "theme": {
     "mode": "dark",
     "light": "Gruvbox Light Hard",
