--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,5 +1,12 @@
 // See https://zed.dev/docs/configuring-zed.
 {
+  "assistant": {
+    "default_model": {
+      "provider": "openai",
+      "model": "gpt-3.5-turbo"
+    },
+    "version": "2"
+  },
   "base_keymap": "VSCode",
   "features": {
     "inline_completion_provider": "supermaven"
