--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,5 +1,9 @@
 // See https://zed.dev/docs/configuring-zed.
 {
+  "vim_mode": true,
+  "features": {
+    "inline_completion_provider": "supermaven"
+  },
   "assistant": {
     "default_model": {
       "provider": "openai",
@@ -8,10 +12,6 @@
     "version": "2"
   },
   "base_keymap": "VSCode",
-  "features": {
-    "inline_completion_provider": "supermaven"
-  },
-  "vim_mode": true,
   "ui_font_size": 13,
   "buffer_font_family": "FiraCode Nerd Font", // MesloLGL Nerd Font",
   "buffer_font_size": 12,
@@ -21,5 +21,32 @@
     "dark": "Gruvbox Dark Hard"
   },
   "cursor_blink": false,
-  "scrollbar": { "show": "never" }
+  "scrollbar": { "show": "never" },
+  "use_autoclose": false,
+  "languages": {
+    "Python": {
+      "format_on_save": "on"
+    }
+  },
+  "lsp": {
+    "lintls": {
+      "settings": {
+        "python": {
+          "linters": [
+            {
+              "program": "ruff",
+              "args": ["check", "--stdin-filename", "$filename"],
+              "pattern": "(.*):(\\d+):(\\d+): (.*)",
+              "filename_match": 1,
+              "line_match": 2,
+              "start_col_match": 3,
+              "description_match": 4,
+              "use_stdin": true,
+              "use_stderr": false
+            }
+          ]
+        }
+      }
+    }
+  }
 }
