--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -13,7 +13,8 @@
   },
   "base_keymap": "VSCode",
   "ui_font_size": 13,
-  "buffer_font_family": "FiraCode Nerd Font", // MesloLGL Nerd Font",
+  "buffer_font_family": "FiraCode Nerd Font Mono", // MesloLGL Nerd Font",
+  "buffer_font_weight": 400,
   "buffer_font_size": 12,
   "theme": {
     "mode": "dark",
