--- a/.config/pickls/pickls.yaml
+++ b/.config/pickls/pickls.yaml
@@ -1,4 +1,8 @@
 ---
+ai:
+  openai:
+    model: gpt-4o
+    api_key_cmd: ["pass", "openai-api-key"]
 symbols:
   source: universal-ctags
   ctags_timeout_ms: 500
@@ -23,6 +27,21 @@ languages:
         use_stderr: false
         use_stdin: true
   lua:
+    linters:
+      - program: luacheck
+        args:
+          - --formatter
+          - plain
+          - --ranges
+          - --no-color
+          - '-'
+        pattern: 'stdin:(\d+):(\d+)-(\d+): (.*)'
+        line_match: 1
+        start_col_match: 2
+        end_col_match: 3
+        description_match: 4
+        use_stderr: false
+        use_stdin: true
     formatters:
       - program: lua-format
         args:
@@ -38,23 +57,6 @@ languages:
           - --wrap
           - '80'
           - '-'
-  rust:
-    root_markers:
-      - Cargo.toml
-    linters:
-      - program: cargo
-        args: ["check", "--message-format", "short"]
-        use_stderr: false
-        use_stdin: true
-        pattern: '(.*):(\d+):(\d+): ([^\[]*): (.*)'
-        filename_match: 1
-        line_match: 2
-        start_col_match: 3
-        severity_match: 4
-        description_match: 5
-    formatters:
-      - program: rustfmt
-        args: []
   python:
     root_markers:
       - .git
